# BOTNOVOTESTEATT

./: .env.example  .gitignore  README.md  README_OLD.md  STATUS.md  botlib.py  browser_launcher.py  config.yaml  demo_modern_gui.py  pyproject.toml  quick_browser.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_gui.py  setup.bat  test_gui.py
docs/: ANTI_SPAM_IMPROVEMENTS.md  CAPTCHA_FIX.md  CAPTCHA_SYSTEM.md  CLEANUP_COMPLETE.md  GIT_SOURCE_CONTROL_GUIDE.md  LINTING_PROGRESS.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SUCCESS.md  PROJECT_ORGANIZATION.md  PROJECT_ORGANIZATION_FINAL.md  PROJETO_FINALIZADO.md  QUEST_AUTOMATION_COMPLETE.md  REDIRECTION_FIX.md  TIMING_FIXES.md
docs/analysis/: quest_page_analysis.html  quest_page_structure.html  quest_system_raw_html.html
docs/fixes/: BOT_EXPERIENCE_IMPROVEMENTS.md  BROWSER_FIX_COMPLETE.md  CAPTCHA_POST_RESOLUTION_FIX.md  COMBAT_BUTTON_DETECTION_FIX.md  COMBAT_HP_REPORTING_FIX.md  COMBAT_OPTIMIZATION_COMPLETE.md  FINAL_STOP_START_FIX_COMPLETE.md  FINAL_STOP_START_FIX_ENHANCED_WEB_ENGINE.md  LATEST_FIXES_COLLECTION.md  STOP_START_CONTEXT_FIXES.md  STOP_START_CRASH_WEB_ENGINE_SINGLETON_FIX.md
docs/guides/: MODULAR_STRUCTURE.md  SMART_STEPS_README.md  SOLUTION_SUMMARY.md  UNIFIED_SYSTEM.md
scripts/demos/: demo_bot_completo.py
scripts/launchers/: launcher.py
scripts/tests/: README.md  simple_playwright_test.py  test_captcha_system.py  test_cloudflare.py  test_combat.py  test_gathering.py  test_gui.py  test_indefinite_waiting.py  test_main_init.py  test_optimized_systems.py  test_profile_1.py  test_quick_steps.py  test_speed_improvements.py  visual_test.py
src/: bot_gui.py  bot_runner.py  bot_runner_new.py  main.py  main_console.py
src/ai/: __init__.py
src/automation/: __init__.py  quest_automation.py  web_engine.py
src/config/: __init__.py  context.py  types.py
src/core/: __init__.py  bot_runner.py
src/driver/: __init__.py
src/integrations/: __init__.py
src/systems/: __init__.py  captcha.py  combat.py  gathering.py  healing.py  steps.py
src/ui/: __init__.py  bot_gui.py  gui.py  modern_bot_gui.py  modern_gui.py  simple_gui.py
src/utils/: __init__.py
tests/: root_test_combat_fix.py  root_test_combat_simple.py  root_test_final_stop_start_validation.py  root_test_gui.py  root_test_gui_bot.py  root_test_hp_fix.py  root_test_improvements.py  root_test_navigation_fixes.py  root_test_quest_automation.py  root_test_quest_force.py  root_test_quest_interactions.py  root_test_quest_interactions_fixed.py  root_test_quick_stop_start.py  root_test_simple_stop_start.py  root_test_stop_start_fix.py  root_test_stop_start_web_engine_fix.py  root_test_travel_navigation.py  root_test_web_engine_debug.py  test_bot_runner.py  test_browser_launch.py  test_captcha_opening.py  test_chromium_detection.py  test_combat_optimizations.py  test_connection.py  test_debug_port.py  test_full_automation.py  test_improved_performance.py  test_performance.py  test_quick_start.py  test_shutdown.py  test_smart_steps.py  test_ultra_fast_detection.py  test_unified_system.py  test_workflow.py
tools/: README.md  analyze_quest_page.py  analyze_quest_page_fixed.py  browser_control_simple.py  browser_demo.py  complete_quest_analysis.py  debug_steps.py  instructions.py  launch_browser.py  manual_profile_launcher.py  start_bot_with_debugging.py  start_browser.py  ultra_stealth_browser.py
